--- a/Cinema-webapp/wwwroot/css/site.css
+++ b/Cinema-webapp/wwwroot/css/site.css
@@ -20,3 +20,50 @@ html {
 body {
   margin-bottom: 60px;
 }
+/* Movie section */
+.movie-block{
+    width: 20%;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+.movie-poster-block {
+    width: 90%;
+    max-width: 200px;
+    margin: 10px auto;
+}
+.movie-poster {
+    max-width: 200px;
+    border-radius: 10px;
+/*    margin: 0 auto;*/
+}
+
+.movie-info {
+    padding: 10px;
+}
+
+.movie-name {
+    font-weight: bold;
+    font-size: 24px;
+}
+
+.movie-description, .movie-genre, .movie-duration, .movie-release-date, .movie-rating{
+    font-size: 14px;
+    margin: 0;
+    padding-bottom: 5px;
+}
+
+.showtime-button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 5px;
+}
+.showtime-button:hover {
+    background-color: #00acff;
+    color: white;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 5px;
+}
