--- a/Cinema-webapp/Views/Showtime/Index.cshtml
+++ b/Cinema-webapp/Views/Showtime/Index.cshtml
@@ -1,5 +1,20 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model IEnumerable<Cinema_webapp.Models.Showtime>
+
 @{
+    ViewData["Title"] = "Showtimes";
+}
+
+<style>
+    body {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background: linear-gradient(to right, #1e1e2f, #3a3a5a);
+        color: #ffffff;
+        margin: 0;
+        padding: 0;
+    }
+</style>
+
+@foreach (var showtime in Model)
+{
+   
 }
