--- a/Cinema-webapp/Views/Movie/Index.cshtml
+++ b/Cinema-webapp/Views/Movie/Index.cshtml
@@ -121,7 +121,7 @@
             <p><strong>Рейтинг IMDb:</strong> @movie.Rating</p>
         </div>
 
-        <a href="/Showtime" class="cta-button">🎟️ Сеанси</a>
+        <a asp-action="Select" asp-controller="Movie" asp-route-id="@movie.Id" class="btn btn-primary">🎟️ Сеанси</a>
     </div>
 }
 
