--- a/Cinema-webapp/Views/Home/Index.cshtml
+++ b/Cinema-webapp/Views/Home/Index.cshtml
@@ -99,47 +99,5 @@
 <div class="hero-section">
     <h1>Welcome to Cinema Center</h1>
     <p>Choose a ticket to watch all the latest blockbusters in stunning quality!</p>
-    <a href="/Ticket" class="cta-button">Buy Ticket</a>
+    <a href="/Movie" class="cta-button">Select movie</a>
 </div>
-
-<!-- Секция фильмов -->
-<div class="movies-section">
-    <h2>🎬 Нові фільми у прокаті</h2>
-    <table>
-        <thead>
-            <tr>
-                <th>Назва фільму</th>
-                <th>Жанр</th>
-                <th>Тривалість</th>
-                <th>Прем’єра</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td><a href="/Movie">Oppenheimer</a></td>
-                <td>Історична драма</td>
-                <td>180 хв</td>
-                <td>26.07.2023</td>
-            </tr>
-            <tr>
-                <td><a href="/Movie">Dune: Part Two</a></td>
-                <td>Фантастика</td>
-                <td>165 хв</td>
-                <td>29.02.2024</td>
-            </tr>
-            <tr>
-                <td><a href="/Movie">Kung Fu Panda 4</a></td>
-                <td>Анімація, пригоди</td>
-                <td>94 хв</td>
-                <td>07.03.2024</td>
-            </tr>
-            <tr>
-                <td><a href="/Movie">The Batman 2</a></td>
-                <td>Бойовик, детектив</td>
-                <td>150 хв</td>
-                <td>2025</td>
-            </tr>
-        </tbody>
-    </table>
-</div>
-
