--- a/Cinema-webapp/Views/Showtime/Index.cshtml
+++ b/Cinema-webapp/Views/Showtime/Index.cshtml
@@ -30,6 +30,7 @@
    <div class="showtime-box">
        <p>Початок о @showtime.StartTime </p>
        <p>Кінець о @showtime.EndTime </p>
+       <p>Зал # @showtime.HallId</p>
         <a asp-controller="Seat" asp-action="Select" asp-route-id="@showtime.Id" class="cta-button">🎟️ Місця</a>
    </div>
 }
