--- a/Cinema-webapp/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Cinema-webapp/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,9 +5,89 @@
     ViewData["Title"] = "Log in";
 }
 
+<style>
+    body {
+        background: linear-gradient(to right, #1e1e2f, #3a3a5a);
+        color: #fff;
+    }
+
+    h1 {
+        color: #ffcc00;
+        text-align: center;
+        margin-top: 30px;
+        margin-bottom: 20px;
+    }
+
+    .row {
+        margin-top: 40px;
+    }
+
+    form {
+        background-color: #2c2c3a;
+        padding: 30px;
+        border-radius: 12px;
+        box-shadow: 0 0 15px rgba(0,0,0,0.4);
+    }
+
+    .form-floating label {
+        color: #bbb;
+    }
+
+    .form-control {
+        background-color: #3d3d4d;
+        color: #fff;
+        border: 1px solid #555;
+    }
+
+        .form-control:focus {
+            background-color: #444;
+            border-color: #ffcc00;
+            box-shadow: none;
+            color: #fff;
+        }
+
+    .btn-primary {
+        background-color: #ffcc00;
+        color: #1e1e2f;
+        font-weight: bold;
+        border: none;
+    }
+
+        .btn-primary:hover {
+            background-color: #e6b800;
+        }
+
+    .text-danger {
+        font-size: 0.9rem;
+    }
+
+    a {
+        color: #ffcc00;
+    }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+    .col-md-6 h3 {
+        color: #ffcc00;
+    }
+
+    .btn.btn-primary[name="provider"] {
+        margin-bottom: 10px;
+        background-color: #3a3a5a;
+        color: #fff;
+        border: 1px solid #777;
+    }
+
+        .btn.btn-primary[name="provider"]:hover {
+            background-color: #555;
+        }
+</style>
+
 <h1>@ViewData["Title"]</h1>
-<div class="row">
-    <div class="col-md-4">
+<div class="col-md-16">
+    <div class="col-md-16">
         <section>
             <form id="account" method="post">
                 <h2>Use a local account to log in.</h2>
@@ -44,36 +124,6 @@
                     </p>
                 </div>
             </form>
-        </section>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to log in.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
         </section>
     </div>
 </div>
