--- a/Cinema-webapp/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Cinema-webapp/Areas/Identity/Pages/Account/Register.cshtml
@@ -6,8 +6,87 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<div class="row">
-    <div class="col-md-4">
+<style>
+    body {
+        background: linear-gradient(to right, #1e1e2f, #3a3a5a);
+        color: #fff;
+    }
+
+    h1 {
+        text-align: center;
+        margin-top: 30px;
+        color: #ffcc00;
+    }
+
+    form {
+        background-color: #2c2c3a;
+        padding: 30px;
+        border-radius: 12px;
+        box-shadow: 0 0 15px rgba(0,0,0,0.4);
+    }
+
+    .form-floating label {
+        color: #bbb;
+    }
+
+    .form-control {
+        background-color: #3d3d4d;
+        color: #fff;
+        border: 1px solid #555;
+    }
+
+        .form-control:focus {
+            background-color: #444;
+            border-color: #ffcc00;
+            box-shadow: none;
+            color: #fff;
+        }
+
+    .btn-primary {
+        background-color: #ffcc00;
+        color: #1e1e2f;
+        font-weight: bold;
+        border: none;
+    }
+
+        .btn-primary:hover {
+            background-color: #e6b800;
+        }
+
+    .text-danger {
+        font-size: 0.9rem;
+    }
+
+    a {
+        color: #ffcc00;
+    }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+    h3 {
+        color: #ffcc00;
+    }
+
+    .btn[name="provider"] {
+        margin-bottom: 10px;
+        background-color: #444;
+        color: #fff;
+        border: 1px solid #666;
+    }
+
+        .btn[name="provider"]:hover {
+            background-color: #555;
+        }
+
+    .col-md-4, .col-md-6 {
+        margin-top: 30px;
+    }
+</style>
+
+<div class="col-md-16">
+    <div class="col-md-16">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h2>Create a new account.</h2>
             <hr />
@@ -29,36 +108,6 @@
             </div>
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to register.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
     </div>
 </div>
 
