Creating of movie

--- a/Cinema-webapp/Views/AdminPanel/Index.cshtml
+++ b/Cinema-webapp/Views/AdminPanel/Index.cshtml
@@ -44,6 +44,7 @@
             background-color: #444;
             border-color: #ffcc00;
             box-shadow: 0 0 5px #ffcc00;
+            color: #fff;
         }
 
     .text-danger {
@@ -76,7 +77,7 @@
 
 <h2 class="text-center mb-4">Create New Movie</h2>
 
-<form asp-action="Create" method="post" class="p-4 bg-dark text-white rounded shadow-lg" style="max-width: 700px; margin: auto;">
+<form asp-controller="Movie" asp-action="Create" method="post" class="p-4 bg-dark text-white rounded shadow-lg" style="max-width: 700px; margin: auto;">
     <div class="form-group mb-3">
         <label asp-for="Title" class="form-label">Title</label>
         <input asp-for="Title" class="form-control" />
