--- a/Cinema-webapp/Views/Home/Index.cshtml
+++ b/Cinema-webapp/Views/Home/Index.cshtml
@@ -46,6 +46,7 @@
         transition: background-color 0.3s ease;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
         text-decoration: none;
+        margin-bottom: 10px;
     }
 
         .cta-button:hover {
@@ -100,4 +101,5 @@
     <h1>Welcome to Cinema Center</h1>
     <p>Choose a ticket to watch all the latest blockbusters in stunning quality!</p>
     <a href="/Movie" class="cta-button">Select movie</a>
+    <a href="/Account/Mytickets" class="cta-button">My tickets</a>
 </div>
