--- a/Cinema-webapp/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Cinema-webapp/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -17,7 +17,7 @@
     <li class="nav-item"><a class="nav-link @ManageNavPages.EmailNavClass(ViewContext)" id="email" asp-page="./Email">Email</a></li>
     <li class="nav-item"><a class="nav-link @ManageNavPages.ChangePasswordNavClass(ViewContext)" id="change-password" asp-page="./ChangePassword">Password</a></li>
 
-    @if (roleId == "2")  // перевірка по ID ролі
+    @if (roleId == "b9ce5a68-f322-4a59-84ec-10841234bbe3")  // перевірка по ID ролі
     {
         <li class="nav-item">
             <a class="nav-link" id="create-movie" href="/AdminPanel">
