--- a/Cinema-webapp/Views/Account/MyTickets.cshtml
+++ b/Cinema-webapp/Views/Account/MyTickets.cshtml
@@ -83,6 +83,19 @@
         </tbody>
     </table>
 
+    <div class="text-center mt-4">
+        <nav>
+            <ul class="pagination justify-content-center">
+                @for (int i = 1; i <= (int)ViewBag.TotalPages; i++)
+                {
+                    <li class="page-item @(ViewBag.CurrentPage == i ? "active" : "")">
+                        <a class="page-link" href="?page=@i">@i</a>
+                    </li>
+                }
+            </ul>
+        </nav>
+    </div>
+
     <button type="submit" class="btn btn-success">Оплатити вибрані</button>
 
 </form>
