--- a/Cinema-webapp/Views/Home/Index.cshtml
+++ b/Cinema-webapp/Views/Home/Index.cshtml
@@ -98,8 +98,8 @@
 
 <!-- Главная секция -->
 <div class="hero-section">
-    <h1>Welcome to Cinema Center</h1>
-    <p>Choose a ticket to watch all the latest blockbusters in stunning quality!</p>
-    <a href="/Movie" class="cta-button">Select movie</a>
-    <a href="/Account/Mytickets" class="cta-button">My tickets</a>
+    <h1>Вітаємо в Cinema Center</h1>
+    <p>Виберіть квиток, щоб переглянути всі останні блокбастери у приголомшливій якості!</p>
+    <a href="/Movie" class="cta-button">Переглянути афішу</a>
+    <a href="/Account/Mytickets" class="cta-button">Мої квитки</a>
 </div>
